changing api for beer, changing names, adding validation

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -35,6 +35,10 @@ a:hover {
   background-color: #3f92ff86;
   transform: translate(0, 0.05em);
 }
+.btn:disabled {
+  background-color: #37373786;
+  transform: translate(0, 0);
+}
 .error {
   color: red;
   font-size: 20px;
