--- a/src/App/pages/EnterPage.css
+++ b/src/App/pages/EnterPage.css
@@ -29,7 +29,7 @@
   width: 100%;
 }
 
-.tabs {
+.tab {
   padding: 15px;
   text-align: center;
   width: 100%;
@@ -41,16 +41,16 @@
   outline: none;
 }
 
-.tabs:first-child {
+.tab:first-child {
   border-radius: 10px 0 0 0;
 }
-.tabs:last-child {
+.tab:last-child {
   border-radius: 0 10px 0 0;
 }
-.tabs:not(:last-child) {
+.tab:not(:last-child) {
   border-right: 1px solid #3f93ff;
 }
-.active-tabs {
+.active-tab {
   background: white;
   border-bottom: 1px solid transparent;
 }
