--- a/src/App/components/Header/Header.scss
+++ b/src/App/components/Header/Header.scss
@@ -12,41 +12,30 @@
     vertical-align: middle;
     font-style: italic;
   }
-
-  &__navigation-list {
+  &__menu {
     flex: 2;
+    margin: 0 2rem;
   }
-  &__nav-button {
-    position: relative;
-    text-decoration: none;
-    padding: 10px;
-    margin: 0 5px;
-    @include text(30px);
-
-    &:active {
-      color: #472212ed;
-    }
-
-    &::after {
-      content: '';
-      display: block;
-      position: absolute;
-      left: 0;
-      width: 0;
-      height: 2px;
-      background-color: black;
-      transition: width 0.3s ease-out;
-    }
-    &:hover::after {
-      width: 100%;
-    }
-    &:active::after {
-      background-color: #472212ed;
-    }
-    &--active::after {
-      width: 100%;
-    }
+  &__navigation-list {
+    display: flex;
+    flex-wrap: wrap;
+    float: right;
+    margin: 20px 0;
+    padding: 0 25px;
   }
+  &__navigation-item {
+    list-style-type: none;
+    padding-right: 10px;
+  }
+  &__menu-liner {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(40, 40, 40, 0.738);
+  }
+
   &__out-button {
     @include button;
     margin: 0 2rem;
