--- a/src/App/pages/FavoriteItemsPage.scss
+++ b/src/App/pages/FavoriteItemsPage.scss
@@ -1,10 +1,22 @@
 @import '../globalStyles/globalStyles.scss';
 
 .favorites {
-  background-image: url('../images/wallpaperflare.com_wallpaper.jpg');
-  background-repeat: repeat;
-  background-size: auto;
-  min-height: 100vh;
+  .background {
+    position: fixed;
+    background-image: url('../images/wallpaperflare.com_wallpaper.jpg');
+    background-position: bottom;
+    background-repeat: repeat;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    z-index: -999;
+  }
+  .blur {
+    background: rgba(71, 34, 18, 0.2); // Make sure this color has an opacity of less than 1
+    backdrop-filter: blur(5px); // This be the blur
+    height: 100vh;
+    width: 100%;
+  }
 
   &__body {
     @include flex(column);
