--- a/src/App/components/TableList/Table.scss
+++ b/src/App/components/TableList/Table.scss
@@ -1,24 +1,38 @@
 @import '../../globalStyles/globalStyles.scss';
 
 .table {
-  margin: 10px;
+  display: block;
+  width: 98vw;
+  overflow: scroll;
   border-radius: 5px;
   background-color: #fff4e0eb;
   border-collapse: collapse;
-  max-width: 80%;
   &__row {
     border-top: 1px solid #472212ed;
   }
   &__cells {
     @include text(20px);
-    padding: 10px;
-    min-width: 60px;
+    padding: 4px;
+    min-width: 27px;
     text-align: center;
     &:not(:last-child) {
       border-right: 1px solid #472212ed;
     }
+    &:nth-child(3) {
+      min-width: 310px;
+      max-width: 400px;
+    }
   }
+  &__cells-img {
+    height: 150px;
+  }
+
   &__button {
     @include button;
+  }
+  @include __full-screen {
+    display: table;
+    width: 85vw;
+    overflow: auto;
   }
 }
