adding arrow style moving components

--- a/src/App/components/Background/Background.scss
+++ b/src/App/components/Background/Background.scss
@@ -6,10 +6,11 @@
   height: 100%;
   width: 100%;
   z-index: -999;
-}
-.blur {
-  background: rgba(71, 34, 18, 0.2);
-  backdrop-filter: blur(8px);
-  height: 100vh;
-  width: 100%;
+
+  &__blur {
+    background: rgba(71, 34, 18, 0.2);
+    backdrop-filter: blur(8px);
+    height: 100vh;
+    width: 100%;
+  }
 }
