--- a/src/App/pages/MainPage.scss
+++ b/src/App/pages/MainPage.scss
@@ -1,6 +1,6 @@
 @import '../globalStyles/globalStyles.scss';
 
-.main {
+.main-page {
   &__body {
     @include flex(column);
     margin-top: 90px;
@@ -10,21 +10,4 @@
     padding: 10px;
     margin: 10px 5px;
   }
-
-  // .background {
-  //   position: fixed;
-  //   background-image: url('../images/background_wallpaper.jpg');
-  //   background-position: bottom;
-  //   background-repeat: repeat;
-  //   background-size: cover;
-  //   height: 100%;
-  //   width: 100%;
-  //   z-index: -999;
-  // }
-  // .blur {
-  //   background: rgba(71, 34, 18, 0.2);
-  //   backdrop-filter: blur(8px);
-  //   height: 100vh;
-  //   width: 100%;
-  // }
 }
