--- a/src/App/components/FavoriteItems/FavoriteItems.scss
+++ b/src/App/components/FavoriteItems/FavoriteItems.scss
@@ -1,5 +1,9 @@
 @import '../../globalStyles/globalStyles.scss';
 
-.favorite {
+.favorite-item {
   @include flex(column, nowrap);
+
+  &__button {
+    @include button;
+  }
 }
