--- a/src/App/components/UpScrollButton/UpScrollButton.scss
+++ b/src/App/components/UpScrollButton/UpScrollButton.scss
@@ -1,61 +1,26 @@
-.up-button {
-  /* фиксированное позиционирование */
-  position: fixed;
-  visibility: hidden;
-  /* цвет фона */
-  background-color: #673ab7;
-  /* расстояние от правого края окна браузера */
-  right: 20px;
-  /* расстояние от нижнего края окна браузера */
-  bottom: 0;
-  /* скругление верхнего левого угла */
-  border-top-left-radius: 8px;
-  /* скругление верхнего правого угла */
-  border-top-right-radius: 8px;
-  /* вид курсора */
-  cursor: pointer;
-  /* отображение элемента как flex */
-  display: flex;
-  /* выравниваем элементы внутри элемента по центру вдоль поперечной оси */
-  align-items: center;
-  /* выравниваем элементы внутри элемента по центру вдоль главной оси */
-  justify-content: center;
-  /* ширина элемента */
-  width: 60px;
-  /* высота элемента */
-  height: 50px;
-  &::before {
-    content: '';
-    width: 40px;
-    height: 40px;
-    background: transparent no-repeat center center;
-    background-size: 100% 100%;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23fff' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z'/%3E%3C/svg%3E");
-  }
+@import '../../globalStyles/globalStyles.scss';
 
-  &__active {
+.up-button {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  background-color: rgba(71, 34, 18, 0.9294117647);
+  right: 2rem;
+  bottom: 2rem;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  @include flex;
+  width: 4rem;
+  height: 4rem;
+  transition: opacity 1s ease-in-out;
+
+  &--active {
+    opacity: 1;
     visibility: visible;
   }
+
   &:hover {
-    background-color: #512da8; /* цвет заднего фона при наведении */
-  }
-}
-
-.btn-up::before {
-  content: '';
-  width: 40px;
-  height: 40px;
-  background: transparent no-repeat center center;
-  background-size: 100% 100%;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23fff' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z'/%3E%3C/svg%3E");
-}
-
-.btn-up_hide {
-  display: none;
-}
-
-@media (hover: hover) and (pointer: fine) {
-  .btn-up:hover {
-    background-color: #512da8; /* цвет заднего фона при наведении */
+    background-color: rgba(111, 55, 31, 0.929);
   }
 }
