adding favicon, empty element, favorite checking

--- a/src/App/components/EnterComponents/ValidationErrors/ValidationErrors.scss
+++ b/src/App/components/EnterComponents/ValidationErrors/ValidationErrors.scss
@@ -2,6 +2,8 @@
 
 .error-list {
   @include clean;
-  @include text(16px, rgba(255, 0, 0, 0.936));
   text-align: left;
+  &__error {
+    @include text(16px, red);
+  }
 }
