--- a/src/App/components/EnterComponents/EnterForm/EnterForm.scss
+++ b/src/App/components/EnterComponents/EnterForm/EnterForm.scss
@@ -63,7 +63,7 @@
     @include text(15px);
     font-weight: bold;
     border-radius: 10px;
-    margin-bottom: 25px;
+    margin: 10px;
     padding: 10px 20px;
   }
   &__form-box {
@@ -72,5 +72,9 @@
   &__button {
     @include button;
     padding: 10px 15px;
+  }
+  &__error {
+    margin: 10px;
+    @include text(20px, red);
   }
 }
