--- a/src/App/components/Navigation/Navigation.scss
+++ b/src/App/components/Navigation/Navigation.scss
@@ -41,23 +41,25 @@
       color: #472212ed;
     }
 
-    &::after {
+    &::before {
       content: '';
       display: block;
       position: absolute;
       left: 0;
+      bottom: -5px;
       width: 0;
       height: 2px;
       background-color: black;
       transition: width 0.3s ease-out;
     }
-    &:hover::after {
+    &:hover::before {
       width: 100%;
     }
-    &:active::after {
+    &:active::before {
       background-color: #472212ed;
     }
-    &--active::after {
+
+    &--active::before {
       width: 100%;
     }
   }
