--- a/src/App/components/ValidationErrors/ValidationErrors.scss
+++ b/src/App/components/ValidationErrors/ValidationErrors.scss
@@ -1,4 +1,4 @@
-@import '../../../globalStyles/globalStyles.scss';
+@import '../../__globalStyles/__globalStyles.scss';
 
 .error-list {
   @include clean;
