--- a/src/App/components/FavoriteItems/FavoriteItems.scss
+++ b/src/App/components/FavoriteItems/FavoriteItems.scss
@@ -5,7 +5,7 @@
 
   &__empty {
     @include flex(column, nowrap);
-    background-color: #fff4e0ae;
+    background-color: #fff4e0;
     margin: 1rem;
     padding: 1rem;
     border-radius: 5px;
